--- a/src/public/index.css
+++ b/src/public/index.css
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-  background-color: #343a40;
+  background-color: #264653;
   /* Dark background similar to the example */
   color: white;
   /* White text for contrast */
@@ -322,6 +322,16 @@ main {
   font-size: 14px;
 }
 
+.request-url-params-layout{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+.url-param-cell-input{
+  min-width: 60px;
+  margin-top: 5px;
+}
+
 .curl {
   background-color: #264653;
   /* Dark blue background for curl command */
@@ -447,6 +457,12 @@ pre {
 .response-header-key, .response-header-value {
   margin-left: 10px;
   color: #aaa;
+}
+
+.url-param-input{
+  outline-color: #c9ab04;
+  border: 1px solid #c9ab04;
+  padding: 5px;
 }
 
 .param-cell-input {
