--- a/src/public/index.css
+++ b/src/public/index.css
@@ -57,6 +57,31 @@ header p {
   /* Space between the title and the version */
 }
 
+.flex-box{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.headers-button {
+  background-color: #c9ab04; /* Green background */
+  border: none; /* Remove border */
+  color: white; /* White text */
+  padding: 10px 20px; /* Some padding */
+  text-align: center; /* Center the text */
+  text-decoration: none; /* Remove underline */
+  display: inline-block; /* Inline block for proper sizing */
+  font-size: 16px; /* Set the font size */
+  margin: 10px 0px; /* Add some margin */
+  cursor: pointer; /* Pointer cursor on hover */
+  border-radius: 5px; /* Rounded corners */
+}
+
+.headers-button:hover {
+  background-color: #aa9104; /* Darker green on hover */
+}
+
 .version {
   display: inline-block;
   background-color: #e7e7e7;
@@ -493,4 +518,97 @@ pre {
 
 .whiteBorder {
   border: 1px solid #fff !important;
+}
+
+
+
+/* model code */
+
+/* Modal container, initially hidden */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0,0,0,0.4); /* Black with opacity */
+}
+
+/* Modal content box */
+.modal-content {
+  background-color: #264653;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  max-width: 1000px; /* Could be more or less, depending on screen size */
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Close button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #ffec99;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+
+
+
+
+/* globel headers */
+
+/* Container for all headers */
+.globe-headers-container {
+  margin-top: 20px;
+}
+
+/* Container for each header */
+.globe-header-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+/* Styling for the header key */
+.header-key {
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #fff;
+}
+
+/* Container for the input and description */
+.header-details {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+/* Input field styling */
+.input-field {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+  color: #333;
+}
+
+/* Description styling */
+.header-description {
+  margin: 0;
+  font-size: 12px;
+  color: #bbb;
 }
