--- a/src/public/index.css
+++ b/src/public/index.css
@@ -456,6 +456,11 @@ pre {
   border-radius: 5px;
   padding: 5px 10px 5px 10px;
   font-size: 12px;
+  margin-left: 5px;
+}
+
+.response-time {
+  font-size: 12px;
 }
 
 /* toast css */
@@ -726,7 +731,7 @@ pre {
 }
 
 
-.body-type-select{
+.body-type-select {
   border: 1px solid #c9ab04;
   border-radius: 5px;
   outline: none;
@@ -743,14 +748,14 @@ pre {
   color: #606060;
 }
 
-.example-response{
+.example-response {
   background-color: #f4f4f9;
   padding: 5px;
   border-radius: 5px;
   margin-top: 5px;
 }
 
-.example-response-description{
+.example-response-description {
   font-size: 16px;
 }
 
@@ -758,6 +763,6 @@ pre {
   font-size: 16px;
 }
 
-.pointer{
+.pointer {
   cursor: pointer;
 }
