--- a/src/public/index.css
+++ b/src/public/index.css
@@ -283,6 +283,7 @@ main {
 }
 
 .execute-btn-wrapper {
+  margin-top: 10px;
   display: none;
 }
 
@@ -765,4 +766,27 @@ pre {
 
 .pointer {
   cursor: pointer;
+}
+
+
+
+/* loader */
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background:
+    radial-gradient(farthest-side, #c9ab04 94%, #0000) top/8px 8px no-repeat,
+    conic-gradient(#0000 30%, #c9ab04);
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
+  animation: l13 1s infinite linear;
+  margin: auto;
+}
+
+@keyframes l13 {
+  100% {
+    transform: rotate(1turn)
+  }
 }
