fixed minnor issues and added keywords

--- a/src/public/index.css
+++ b/src/public/index.css
@@ -163,6 +163,7 @@ header .base-url-container {
 
 .base-url-selector {
   cursor: pointer;
+  min-width: 250px;
 }
 
 header .base-url-selector:focus {
